--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,16 @@
 }
 
 .main {
-    width: 1200px;
-    height: 1200px;
+    width: 300px;
     margin: 0 auto;
+}
+
+@media screen and (min-width: 600px) {
+    .main {
+        width: 900px;
+    }
+}
+
+#myChart {
+    margin-top: 50px;
 }
